# Lyra-Chat

./: docker-compose.yml  package.json  pnpm-lock.yaml
apps/backend/: Dockerfile  pyproject.toml
apps/frontend/: Dockerfile  package.json
apps/frontend/app/: globals.css
